worked on the changes

--- a/saas-metrics/Burn-rate.html
+++ b/saas-metrics/Burn-rate.html
@@ -267,15 +267,14 @@
                     <p class=" head_ques fontGraphikSemibold "> What is Burn Rate?</p>
                     <p class="paragraph fontLatoRegular">
                         Burn rate can be<br />
-
-                        Net burn, the amount a company loses monthly.<br />
-                        Gross burn, the company’s monthly operating cost.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Net burn, the amount a company loses monthly.</a></li> </br>
+                       <li  style="color:#665CD7"><a style="color:#7B6A77"> Gross burn, the company’s monthly operating cost.</a></li><br />
 
                     </p>
                     <p class=" head_ques fontGraphikSemibold "> Why Net Burn Rate is important?</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Shows whether your current revenue is substantial enough.<br />
-                        Shows how long you can sail before you run out of money.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Shows whether your current revenue is substantial enough.</a> </li><br />
+                       hShows how long you can sail before you run out of money.</a></li><br />
 
                     </p>
                     <p class=" head_ques fontGraphikSemibold "> To calculate Net Burn Rate
@@ -289,10 +288,10 @@
 
                     <p class=" head_imp fontGraphikSemibold " style="margin-top: 20px;">Tips to decrease Burn Rate</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Try to merge or retire activities that require more money to be run.<br />
-                        Look for free alternatives for any of the tools you use to work/sell.<br />
-                        Try to bring in more qualified leads to compensate for the burn rate.<br />
-                        Alternatively, considering bootstrapping or raising funds.<br />
+                        Try to merge or retire activities that require more money to be run.</a></li><br />
+<li style="color:#665CD7"><a style="color:#7B6A77">                            <li style="color:#665CD7"><a style="color:#7B6A77">Look for free alternatives for any of the tools you use to work/sell.</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77">Try to bring in more qualified leads to compensate for the burn rate.</a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77">Alternatively, considering bootstrapping or raising funds.</a></li><br />
                     </p>
                 <div class="row mobilebottom" style="display:none"  onclick ="window.location.href='customer-engagement-score.html'" >
                   <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
