--- a/saas-metrics/Net-promoter-score.html
+++ b/saas-metrics/Net-promoter-score.html
@@ -270,7 +270,10 @@
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         The metric that lets you measure customer satisfaction and loyalty. It puts them into three
-                        types: passive, detractors, and promoters.
+                        types:
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  passive </a></li>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  detractors</a></li>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  promoters. </a></li>
 
 
 
@@ -278,10 +281,10 @@
                     <p class=" head_imp fontGraphikSemibold ">Why is it important?
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Shows how well a customer would recommend your product<br />
-                        0 means they’d never <br />
-                        10 means they’re very likely<br />
-                        Overall, the higher your NPS, the more satisfied the customer is.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Shows how well a customer would recommend your product </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  0 means they’d never</a></li> <br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  10 means they’re very likely </a></li> <br/>
+                                    <li style="color:#665CD7"><a style="color:#7B6A77"> Overall, the higher your NPS, the more satisfied the customer is.</a></li><br />
 
 
 
@@ -290,13 +293,17 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Take surveys— Ask them to directly rate how likely they are to tell someone about your
-                        product<br />
-                        Segregate— Detractors are 0-6, Passives are 7-8, and Promoters are 9-10<br />
-                        Get your overall NPS by subtracting the percentage of detractors from that of the
-                        promoters.<br />
-                        % of Detractors (minus) % of Promoters = Overall NPS<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take surveys— Ask them to directly rate how likely they  tell someone about your
+                        product. </a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Segregate— Detractors are 0-6, Passives are 7-8, and Promoters are 9-10. </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Get your overall NPS by subtracting the percentage of detractors from that of the
+                        promoters. </a></li><br />
 
+                        <div class="for_div1">
+                            <p class="formula"> % of Detractors (minus) % of Promoters = Overall NPS. 
+    
+                            </p>
+                        </div>
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customerlifetime.html'">
                         <div class=" col-7 bottom_next"style="float:right;right:0 ;position:absolute;">
