--- a/saas-metrics/annual-recurring-revenue.html
+++ b/saas-metrics/annual-recurring-revenue.html
@@ -241,7 +241,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz"  onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html"style="color:#665CD7;" > 13.Annual Recurring Revenue </a>
@@ -278,10 +278,10 @@
                     <p class=" head_imp fontGraphikSemibold ">Why is Annual Recurring Revenue important?
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        It highlights the overall health of an organization.
-                        A business with less or no yearly recurring revenue would need to reconsider strategies to stay
-                        afloat.
-                        On the other hand, above-expected revenue can motivate you for bigger projects
+                        <li style="color:#665CD7"><a style="color:#7B6A77">It highlights the overall health of an organization.</a> </li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> A business with less or no yearly recurring revenue would need to reconsider strategies to stay
+                        afloat. </a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  On the other hand, above-expected revenue can motivate you for bigger projects.</a></li><br/>
 
 
 
@@ -292,12 +292,17 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Take the average cost of the product/service
-                        Multiply it with the number of paying customers
-                        Multiply this result with 12
-                        ARR = (Cost of Product or Service) x (# of customers) x (12 Months)
-                        P.S. Revenue is the total money earned whereas Profits are the surplus after subtracting
-                        business expenses.
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the average cost of the product/service.</a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply it with the number of paying customers.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  Multiply this result with 12.</a></li><br/>
+                        <div class="for_div1" style="width: auto !important; ">
+                            <p class="formula" >  ARR = (Cost of Product or Service) x (# of customers) x (12 Months)
+    
+                            </p>
+                        </div>
+                      <br/>
+                      <li style="color:#665CD7"><a style="color:#7B6A77">  P.S. Revenue is the total money earned whereas Profits are the surplus after subtracting
+                        business expenses.</a></li><br/>
 
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='product-qualified-leads.html'">
