--- a/saas-metrics/average-revenue-per-account.html
+++ b/saas-metrics/average-revenue-per-account.html
@@ -280,8 +280,8 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        ARPA allows companies to identify the revenue generation and per-unit growth of a product.<br />
-                        It also helps in predicting overall growth of the product, thus informing future strategies.
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> ARPA allows companies to identify the revenue generation and per-unit growth of a product.</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  It also helps in predicting overall growth of the product, thus informing future strategies.</a></li>
 
 
 
@@ -290,11 +290,16 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        ($) Total monthly/yearly recurring revenue / (#) total accounts = ($) Average Revenue Per
-                        Account (ARPA).
+                        <div class="for_div1" style="width:auto !important;height: auto !important;">
+                            <p class="formula"> ($) Total monthly/yearly recurring revenue / (#) total accounts = ($) Average Revenue Per
+                                Account (ARPA).
+    
+                            </p>
+                        </div>
+                       
                         <br />
-                        You can modify this formula to get other scores, such as the Average Revenue per New Account and
-                        the Average Revenue per Existing Account.
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  You can modify this formula to get other scores, such as the Average Revenue per New Account and
+                        the Average Revenue per Existing Account.</a></li><br/>
 
 
                     </p>
