--- a/saas-metrics/customer-acqisation-cost.html
+++ b/saas-metrics/customer-acqisation-cost.html
@@ -240,7 +240,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-C  hurn.html" > 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
@@ -278,20 +278,24 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Customer Acquisition Cost = Cost of Sales/Marketing Efforts (divided by) Number of New
-                        Paying/Acquired Customers
-
+                        <div class="for_div1" style="width: auto !important; height:auto !important">
+                            <p class="formula"> Customer Acquisition Cost = Cost of Sales/Marketing Efforts (divided by) Number of New
+                                Paying/Acquired Customers.
+    
+                            </p>
+                        </div>
+                       
+<br/>
                     <p class=" head_imp fontGraphikSemibold ">Importance of this metric -
 
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Customer acquisition is a long, tedious process at the beginning stages of an organization. But
-                        slowly,<br/>
-                        under a good acquisition strategy, word spreads about you and more leads come
-                        at your door.<br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Customer acquisition is a long,tedious process of an organization. But
+                        slowly.</a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Under a good acquisition strategy, word spreads  and more leads come at your door.</a></li><br/>
 
-                        Ultimately, CAC helps you understand where your marketing/sales strategies are effective or not.
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Ultimately, CAC helps  where your marketing/sales strategies are effective or not.</a></li>
                         <br />
                         </p>
                         <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customerretention.html'">
