--- a/saas-metrics/customer-churn.html
+++ b/saas-metrics/customer-churn.html
@@ -239,7 +239,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html"  style="color:#665CD7;"> 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html"  style="color:#665CD7;"> 12.Customer Churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
@@ -279,12 +279,12 @@
 
                 </p>
                 <p class="p fontLatoRegular" style="color:#7B6A77">
-                    At the very least, it takes 5x more money to acquire a new customer than to retain one.
-                    Managing customer churn would help you:
-                    Save customer acquisition costs
-                    Focus on long-term retention and recurring profits
-                    Increasing profitability with lesser efforts
-                    Understand users’ pain-points
+                    <li style="color:#665CD7"><a style="color:#7B6A77"> At the very least, it takes 5x more money to acquire a new customer than to retain one.</a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Managing customer churn would help you.</a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Save customer acquisition costs.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">Focus on long-term retention and recurring profits.</a></li><br/>
+                                    <li style="color:#665CD7"><a style="color:#7B6A77">Increasing profitability with lesser efforts.</a></li><br/>
+                                        <li style="color:#665CD7"><a style="color:#7B6A77">Understand users’ pain-points.</a></li></br>
 
 
                 </p>
@@ -294,11 +294,17 @@
 
                 </p>
                 <p class="p fontLatoRegular" style="color:#7B6A77">
-                    Select a time period, generally a month or a quarter
-                    Note down the no. of new customers during this period
-                    Note down the no. of customers lost during this period
-                    Divide Acquired Customers with Lost Customers, and multiply that answer with 100.
-                    (Acquired Customers / Lost Customers) * 100
+                    <li style="color:#665CD7"><a style="color:#7B6A77">Select a time period, generally a month or a quarter.</a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Note down the no. of new customers during this period.</a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">Note down the no. of customers lost during this period.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">Divide Acquired Customers with Lost Customers, and multiply that answer with 100.</a></li><br/>
+                   
+
+                    <div class="for_div1">
+                        <p class="formula"> (Acquired Customers / Lost Customers) * 100.
+
+                        </p>
+                    </div>
 
                 </p>
                 </p>
@@ -306,10 +312,10 @@
 
                 </p>
                 <p class="p fontLatoRegular" style="color:#7B6A77">
-                    Invest in training your support and sales reps
-                    Make a great first impression with customers
-                    Open up multiple avenues for user feedback
-                    Constantly fix issues in your product<p/>
+                    <li style="color:#665CD7"><a style="color:#7B6A77">Invest in training your support and sales reps.</a></li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Make a great first impression with customers.</a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">Open up multiple avenues for user feedback.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">Constantly fix issues in your product.</a></li></p>
 
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='annualrecurring.html'" >
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
