--- a/saas-metrics/customer-engagement-score.html
+++ b/saas-metrics/customer-engagement-score.html
@@ -270,36 +270,35 @@
                     <p class=" head_ques fontGraphikSemibold ">Why is Customer Engagement Score (CES) important?</p>
 
 
-                    <p style="color:#7B6A77;line-height: 2.0rem;">A product/service succeeds when more users engage with
-                        it continuously.<br />
-                        A lesser CES indicates potential user churn, and also friction within the experience of the
-                        product.
+                    <p style="color:#7B6A77;line-height: 2.0rem;"><li style="color:#665CD7"><a style="color:#7B6A77">A product/service succeeds when more users engage with
+                        it continuously.</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">A lesser CES indicates potential user churn, and also friction within the 
+                            product.</a></li>
                         .</p>
                     <p class=" head_imp fontGraphikSemibold ">How to calculate Customer Engagement Score?</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Identify the events to track, that would count as ‘engagement’<br />
-                        Label metrics that can help you identify if a user has completed a task, dropped out, and has
-                        come back for an encore.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Identify the events to track, that would count as ‘engagement’</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Label metrics that can help you identify if a user has completed a task, dropped out, and has
+                        come back for an encore.</a></li>
                     </p>
-
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        A simpler method:<br />
-                        Label every event<br />
-                        Measure the usage frequency of these, for a single user.<br />
-                        Multiple the average frequency with the number of events.<br />
-                        Compare this score with scores of other users.<br />
+                    A simpler method:<br />
+                    <li style="color:#665CD7"><a style="color:#7B6A77">Label every event</a></li><br />
+                    <li style="color:#665CD7"><a style="color:#7B6A77"> Measure the usage frequency of these, for a single user.</a></li><br />
+                    <li style="color:#665CD7"><a style="color:#7B6A77"> Multiple the average frequency with the number of events.</a></li><br />
+                    <li style="color:#665CD7"><a style="color:#7B6A77"> Compare this score with scores of other users.</a></li><br />
 
                     </p>
 
                     <p class=" head_imp fontGraphikSemibold ">Tips to enhance Customer Engagement Score
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Send occasional, apt emails highlighting product features or offers.<br />
-                        Make your website copy reflect the overall value of your product.<br />
-                        Consider extending the free trial for some power users.<br />
-                        Customize pricing plans based on users’ needs/behaviors.<br />
-                        Address bugs and issues as soon as users report them.<br />
-                        Make yourself available so that customers can reach out to you.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Send occasional, apt emails highlighting product features or offers.</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Make your website copy reflect the overall value of your product.</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Consider extending the free trial for some power users.</a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77"> Customize pricing plans based on users’ needs/behaviors.</a></li><br />
+                                        <li style="color:#665CD7"><a style="color:#7B6A77"> Address bugs and issues as soon as users report them.</a></li><br />
+                                            <li style="color:#665CD7"><a style="color:#7B6A77"> Make yourself available so that customers can reach out to you.</a></li><br />
 
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='viral-coefficient.html'">
