--- a/saas-metrics/customer-lifetime-value.html
+++ b/saas-metrics/customer-lifetime-value.html
@@ -279,11 +279,16 @@
                     <p class="p fontLatoRegular" style="color:#7B6A77">
                         CLV is the total amount of money a customer will pay to a company during their lifetime.<br />
 
-                        Formula: CLV = ARPU/Revenue or Customer Churn Rate<br />
+                        <div class="for_div1">
+                            <p class="formula">  CLV = ARPU/Revenue or Customer Churn Rate
+    
+                            </p>
+                        </div>
+                        <br/>
 
-                        ARPU or Average Revenue Per User is the average amount of money paid by a customer.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> ARPU or Average Revenue Per User is the average amount of money paid by a customer.</a></li><br/>
 
-                        Customer Churn Rate is the rate at which a customer stops making recurring purchases.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Customer Churn Rate is the rate at which a customer stops making recurring purchases.</a></li><br/>
 
 
                     </p>
@@ -291,11 +296,11 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Customers are quite costly to acquire, and a customer becomes valuable only when they stay with
-                        a business for long. Which means, the higher the CLV, the greater the profits.<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Customers are quite costly to acquire, and a customer becomes valuable only when they stay with
+                        a business for long. Which means, the higher the CLV, the greater the profits.</a></li><br />
 
-                        A growing CLV indicates a better retention of customers and a move toward sustainable
-                        operations.
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> A growing CLV indicates a better retention of customers and a move toward sustainable
+                        operations.</a></li>
 
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='averagerevenue.html'">
