--- a/saas-metrics/customer-retention-rate.html
+++ b/saas-metrics/customer-retention-rate.html
@@ -280,15 +280,15 @@
                         start of a period.</p>
                     <p class=" head_imp fontGraphikSemibold " style="margin-bottom: 0px;"> Important of CRR</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Customer Retention Rate informs businesses about whether they are truly growing or not.
-                        Growth = more customers stay while you continue to add more. </p>
+                        <li style="color:#665CD7"><a style="color:#7B6A77" >Customer Retention Rate informs businesses about they are truly growing or not.</a></li><br/>
+                            <li style="color:#665CD7"> <a style="color:#7B6A77" >Growth = more customers stay while you continue to add more.</a></li> </p>
                     <p class=" head_imp fontGraphikSemibold"  style="margin-bottom: 0px;">Tips to increase Customer Retention Rate</p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Make it a point to deliver more than you what the user expects<br />
-                        Clear up bugs as soon as they are reported<br />
-                        Focus on making the UX as smooth and intuitive as possible<br />
-                        Conduct surveys to understand if there are any usability barriers<br />
-                        Keep community events like webinars and meetups<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77" >Make it a point to deliver more than you what the user expects.</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Clear up bugs as soon as they are reported.</a></li> <br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Focus on making the UX as smooth and intuitive as possible.</a> </li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Conduct surveys to understand if there are any usability barriers.</a> </li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Keep community events like webinars and meetups.</a></li><br />
                     </p>
                    
                     <div class="row mobilebottom" style="display:none"onclick ="window.location.href='Burn-rate.html'" >
