--- a/saas-metrics/lead-velocity-rate.html
+++ b/saas-metrics/lead-velocity-rate.html
@@ -278,11 +278,9 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        ($) Total monthly/yearly recurring revenue / (#) total accounts = ($) Average Revenue Per
-                        Account (ARPA).
-                        <br />
-                        You can modify this formula to get other scores, such as the Average Revenue per New Account and
-                        the Average Revenue per Existing Account.
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Acting as a current indicator for growth, it helps sales teams and your organization understand if the sailing is stable.</a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">Seasonal dips can be predicted and adjusted for by bringing in new leads.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Overall, it helps a business meet its revenue goals without fail.</a></li><br/>
 
 
                     </p>
@@ -291,20 +289,26 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Take the number of qualified leads for the current month (M1)<br />
-                        Subtract last month’s number from that(M2)<br />
-                        Divide the result with the last month’s number <br />
-                        Multiply by 100 <br />
-                        LVR = (M1 ⁠— M2) / M2*100 <br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the number of qualified leads for the current month (M1)</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Subtract last month’s number from that(M2)</a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Divide the result with the last month’s number </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Multiply by 100 </a></li> <br />
+
+                            <div class="for_div1">
+                                <p class="formula">  LVR = (M1 ⁠— M2) / M2*100 
+        
+                                </p>
+                            </div>
+                      <br />
 
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">Tips to increase Lead Velocity Rate
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Be proactive and have sales team work and save up leads before any seasonal dips <br />
-                        Bring in a loyalty program and have existing customers recommend your product<br />
-                        Have seasonal offers to entice other, under-budget users<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Be proactive and have sales team work and save up leads before any seasonal dips </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Bring in a loyalty program and have existing customers recommend your product </a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Have seasonal offers to entice other, under-budget users </a></li><br />
 
 
                     </p>
