--- a/saas-metrics/product-qualified-leads.html
+++ b/saas-metrics/product-qualified-leads.html
@@ -240,7 +240,7 @@
 
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id12', 0)">
-                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-churn.html" > 12.Customer churn </a>
+                        <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="customer-Churn.html" > 12.Customer churn </a>
                     </div>
                     <div class="  row linksz  menu12 fontLatoRegular" id="linksz" onclick="scrollWin('id13', 0)">
                         <span class="cb-factor__item_1" id="item1"></span> <a class="article_ref" href="annual-recurring-revenue.html" > 13.Annual Recurring Revenue </a>
@@ -278,15 +278,13 @@
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">How to identify a PQL
 
-
-
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Product Qualified Leads are the ones who:
-                        Have been on the free trial for a long period of time
-                        active in the community/forums
-                        use most of your features
-                        use your product for crucial tasks
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Product Qualified Leads are the ones who:</a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Have been on the free trial for a long period of time.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">  Active in the community/forums.</a></li><br/>
+                                    <li style="color:#665CD7"><a style="color:#7B6A77">     Use most of your features.</a></li><br/>
+                                        <li style="color:#665CD7"><a style="color:#7B6A77">  Use your product for crucial tasks.</a></li><br/>
 
 
 
@@ -295,23 +293,23 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Nudges at the right time can motivate them to start paying.
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Nudges at the right time can motivate them to start paying.</a></li> <br/>
 
-                        These include:
-                        Let them know that paid customers have no limits<br/>
-                        Track their features’ usage & send them badges<br/>
-                        Highlight the differences of certain features when paid<br/>
-                        Consult on how a paid plan can boost their productivity<br/>
+                          <li style="color:#665CD7"><a style="color:#7B6A77"> These include:</a>  </li><br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  Let them know that paid customers have no limits. </a></li><br/>
+                            <li style="color:#665CD7"><a style="color:#7B6A77">   Track their features’ usage & send them badges.</a></li><br/>
+                                <li style="color:#665CD7"><a style="color:#7B6A77">   Highlight the differences of certain features when paid.</a></li><br/>
+                                    <li style="color:#665CD7"><a style="color:#7B6A77">   Consult on how a paid plan can boost their productivity.</a></li><br/>
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">Importance of PQLs
 
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        When it comes to closing deals, Product Qualified Leads are easier to convince.
+                        <li style="color:#665CD7"><a style="color:#7B6A77">  When it comes to closing deals, Product Qualified Leads are easier to convince.</a></li><br/>
 
-                        This makes them a better metric than sales/marketing qualified leads, as the conversion rate is
-                        higher and much more predictable.
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  This makes them a better metric than sales/marketing qualified leads, as the conversion rate is
+                        higher and much more predictable. </a></li><br/>
                     </p>
                     <div class="row mobilebottom" style="display:none" onclick ="window.location.href='customeracqisationcost.html'" >
                         <div class=" col-6 bottom_next"style="float:right;right:0 ;position:absolute;">
