--- a/saas-metrics/revenue-churn.html
+++ b/saas-metrics/revenue-churn.html
@@ -267,8 +267,9 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Measures the rate at which revenue is lost due to churn in customers or downgrades in
-                        subscription plans. Aka MRR Churn Rate.
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Measures the rate at which revenue is lost due to churn in customers or downgrades in
+                        subscription plans.</a></li> <br/>
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Aka MRR Churn Rate.</a></li>
 
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">Why is Revenue Churn Rate important?
@@ -276,18 +277,24 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Helps track churn rate between high and low spenders<br />
-                        Helps identify which pricing plan/ customer segment is more valuable<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77">Helps track churn rate between high and low spenders</a></li><br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Helps identify which pricing plan/ customer segment is more valuable </a></li><br />
 
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">How to calculate Revenue Churn Rate?
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Take the revenue lost over a period (month/quarter/year)<br />
-                        Divide it with the revenue in the beginning of this period<br />
-                        Multiply by 100<br />
-                        Revenue Churn Rate = Lost Revenue at the end of a period / Revenue in the beginning<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Take the revenue lost over a period (month/quarter/year) </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77"> Divide it with the revenue in the beginning of this period</a></li><br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Multiply by 100 </a></li><br />
+                                <div class="for_div1"style="width:auto !important ; ">
+                                    <p class="formula"> Revenue Churn Rate = Lost Revenue at the end of a period / Revenue in the beginning.
+            
+                                    </p>
+                                </div>
+            
+                       <br />
 
                     </p>
                     <p class=" head_imp fontGraphikSemibold ">Tips to decrease Revenue Churn Rate
@@ -295,12 +302,12 @@
 
                     </p>
                     <p class="p fontLatoRegular" style="color:#7B6A77">
-                        Have a variable pricing scheme<br />
-                        Make it easier for users with lower budgets to sign up <br />
-                        Conduct frequent surveys for usability issues<br />
-                        Ask users if there is something vitally important that is missing, and work on that <br />
-                        Address bugs and minor issues as soon as possible<br />
-                        Don’t change your pricing strategies often<br />
+                        <li style="color:#665CD7"><a style="color:#7B6A77"> Have a variable pricing scheme. </a></li><br />
+                            <li style="color:#665CD7"><a style="color:#7B6A77">  Make it easier for users with lower budgets to sign up.</a></li> <br />
+                                <li style="color:#665CD7"><a style="color:#7B6A77"> Conduct frequent surveys for usability issues.</a></li><br />
+                                    <li style="color:#665CD7"><a style="color:#7B6A77"> Ask users if there is something vitally important that is missing, and work on that. </a></li> <br />
+                                        <li style="color:#665CD7"><a style="color:#7B6A77"> Address bugs and minor issues as soon as possible.</a></li><br />
+                                            <li style="color:#665CD7"><a style="color:#7B6A77">  Don’t change your pricing strategies often.</a></li><br />
 
 
                     </p>
